# zelda64recomp-discord-rpc-mod

./: .gitignore  CMakeLists.txt  Makefile  import_discord_social_sdk.cmake  make_python_functions.py  mod.toml  scene_table.csv  scene_table_parsing.py
include/mod/: extlib_functions.h
src/extlib/: CMakeLists.txt  discord_sdk_implementation.cpp
src/mod/: mod_main.c  scene_table.c  scene_table.h
